<resources>
    <string name="app_name">Picture Of The Day</string>
    <string name="photo_of_the_day_stub">Photo of the Day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поиск термина</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="item_1">На экран 1</string>
    <string name="item_2">На экран 2</string>
    <string name="default_text_chip_theme_settings">Default</string>
    <string name="mars_text_chip_theme_settings">Mars Theme</string>
    <string name="venus_text_chip_theme_settings">Venus Theme</string>
    <string name="night_mode_text">Night mode</string>
    <string name="today_tab_text">Сегодня</string>
    <string name="yesterday_tab_text">Вчера</string>
    <string name="tdby_tab_text">Позавчера</string>
    <string name="wiki_russian_text">Российская Wiki</string>
    <string name="wiki_english_text">Английская Wiki</string>
    <string name="top_text">Top</string>
    <string name="pod_text_menu">Картина дня</string>
    <string name="wiki_text_menu">Википедия</string>
    <string name="solar_system_text_menu">Квест</string>
    <string name="settings_text_menu">Настройки</string>
    <string name="text_question_solar_system">Расположите планеты Солнечной системы, по удаленности от Солнца. Верхнее - Солнце</string>
    <string name="congratulation_title">Поздравляю</string>
    <string name="congratulation_message">Планеты расставлены верно!</string>
    <string name="congratulation_positive_button">Я молодец</string>
    <string name="task_title">Задание</string>
    <string name="task_positive_button">Понятно</string>
</resources>