<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_pod"
            android:icon="@drawable/ic_pod"
            android:title="@string/pod_text_menu" />
        <item
            android:id="@+id/navigation_wiki"
            android:icon="@drawable/ic_wiki_menu"
            android:title="@string/wiki_text_menu" />
        <item
            android:id="@+id/navigation_solar_system"
            android:icon="@drawable/ic_galaxy_menu"
            android:title="@string/solar_system_text_menu" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_menu"
            android:title="@string/settings_text_menu" />
    </group>
</menu>
