<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/bottom_settings_layout_scene">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintBottom_toTopOf="@+id/switchNightMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchHorMode"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/default_theme_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/default_text_chip_theme_settings" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mars_theme_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars_text_chip_theme_settings"
            app:chipIcon="@drawable/ic_mars"
            app:iconStartPadding="@dimen/icon_start_padding_chip_settings" />

        <com.google.android.material.chip.Chip
            android:id="@+id/venus_theme_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venus_text_chip_theme_settings"
            app:chipIcon="@drawable/ic_venus"
            app:iconStartPadding="@dimen/icon_start_padding_chip_settings" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_mode_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chipGroup"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchHorMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_text"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/chipGroup"
        app:layout_constraintEnd_toEndOf="@+id/chipGroup"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>

