<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/default_theme_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:layout_marginEnd="@dimen/margin_default_chip_settings"
            android:text="@string/default_text_chip_theme_settings" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mars_theme_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/mars_text_chip_theme_settings"
            app:chipIcon="@drawable/ic_mars"
            app:iconStartPadding="@dimen/icon_start_padding_chip_settings" />

        <com.google.android.material.chip.Chip
            android:id="@+id/venus_theme_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/venus_text_chip_theme_settings"
            app:chipIcon="@drawable/ic_venus"
            app:iconStartPadding="@dimen/icon_start_padding_chip_settings" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
